[package]
name = "b-f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "lookup"
harness = false